# axum-hot-swappable-router

./: .gitattributes  .gitignore  Cargo.toml  NOTICE  README.md  TODO.md  Taskfile.dist.yaml
benchmarks/: Cargo.toml  RESULT-1000-conn.txt  RESULT.txt  run-benchmarks
benchmarks/src/: hot-swappable.rs  normal.rs  shared.rs
examples/: README.md
examples/restart-dependency/: Cargo.toml  README.md  run-tests
examples/restart-dependency/src/: main.rs
src/: lib.rs
